:memo: docker jdk9 dev examples